minor spacing fix

--- a/resources/css/profile.css
+++ b/resources/css/profile.css
@@ -103,7 +103,7 @@ li {
     margin-top: 80px;
 }
 
-#main h1 {
+#main h2 {
     margin-top: 5%;
     font-weight: bold;
 }
